#43 - 헤로쿠 설정 추가
gradle + spring + java 17 에 맞춰 필요한 모든 설정을 작성

--- a/build.gradle
+++ b/build.gradle
@@ -96,3 +96,10 @@ tasks.withType(JavaCompile) {
 clean.doLast {
     file(querydslDir).deleteDir()
 }
+
+// Heroku 설정
+jar {
+    manifest {
+        attributes('Main-Class': 'alpacaive.projectboard.ProjectBoardApplication')
+    }
+}
